// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@Bean should add Bean metadata to a class when decorated multiple times with @Bean 1`] = `
Object {
  "test2Method": Array [
    PropDecoratorFactory {
      "id": "test2",
    },
    PropDecoratorFactory {
      "id": "test3",
    },
  ],
  "testMethod": Array [
    PropDecoratorFactory {
      "id": "test",
    },
  ],
}
`;

exports[`@Bean should add Bean metadata to a class when decorated with @Bean 1`] = `
Object {
  "test2Method": Array [
    PropDecoratorFactory {
      "id": "test2",
    },
  ],
  "testMethod": Array [
    PropDecoratorFactory {
      "id": "test",
    },
  ],
}
`;

exports[`@BeforeCreate should add BeforeCreate metadata to a class when decorating a method with @BeforeCreate 1`] = `
Object {
  "test2Method": Array [
    PropDecoratorFactory {},
  ],
  "testMethod": Array [
    PropDecoratorFactory {},
  ],
}
`;

exports[`@Config should add Registry and config metadata to a class when decorated with @Config 1`] = `
Array [
  DecoratorFactory {
    "order": 150,
  },
  DecoratorFactory {
    "autobind": true,
    "options": Object {
      "order": 150,
    },
    "type": "ConfigType",
  },
]
`;

exports[`@Config should add Registry and config metadata to a class when decorated with @Config(100) 1`] = `
Array [
  DecoratorFactory {
    "order": 100,
  },
  DecoratorFactory {
    "autobind": true,
    "options": Object {
      "order": 100,
    },
    "type": "ConfigType",
  },
]
`;

exports[`@CoreConfig should add Registry and config metadata to a class when decorated with @CoreConfig 1`] = `
Array [
  DecoratorFactory {
    "order": 50,
  },
  DecoratorFactory {
    "autobind": true,
    "options": Object {
      "order": 50,
    },
    "type": "ConfigType",
  },
]
`;

exports[`@CoreConfig should add Registry and config metadata to a class when decorated with @CoreConfig(100) 1`] = `
Array [
  DecoratorFactory {
    "order": 100,
  },
  DecoratorFactory {
    "autobind": true,
    "options": Object {
      "order": 100,
    },
    "type": "ConfigType",
  },
]
`;

exports[`@InjectContainer should add InjectContainer metadata to a class when decorating a method with @InjectContainer 1`] = `
Array [
  DecoratorFactory {},
]
`;

exports[`@OnMissingBean should add OnMissingBean metadata to a class when decorated multiple times with @OnMissingBean 1`] = `
Object {
  "test2Method": Array [
    PropDecoratorFactory {
      "id": "OnMissingBean1",
    },
    PropDecoratorFactory {
      "id": "OnMissingBean2",
    },
  ],
  "testMethod": Array [
    PropDecoratorFactory {
      "id": "OnMissingBean",
    },
  ],
}
`;

exports[`@OnMissingBean should add OnMissingBean metadata to a class when decorated with @OnMissingBean 1`] = `
Object {
  "test2Method": Array [
    PropDecoratorFactory {
      "id": "OnMissingBean2",
    },
  ],
  "testMethod": Array [
    PropDecoratorFactory {
      "id": "OnMissingBean",
    },
  ],
}
`;

exports[`@Plugin should add Plugin metadata to a class when decorated with @Plugin('TestPlugin') 1`] = `
Array [
  DecoratorFactory {
    "beforeAll": false,
    "dependencies": Array [],
    "name": "TestPlugin",
  },
]
`;

exports[`@Plugin should add Plugin metadata to a class when decorated with @Plugin() 1`] = `
Array [
  DecoratorFactory {
    "beforeAll": false,
    "dependencies": Array [],
    "name": undefined,
  },
]
`;

exports[`@Plugin should add Plugin metadata to a class when decorated with @Plugin({ dependencies: ['TestPlugin'] }) 1`] = `
Array [
  DecoratorFactory {
    "beforeAll": false,
    "dependencies": Array [
      Object {
        "name": "TestPlugin",
        "order": "after",
      },
    ],
    "name": undefined,
  },
]
`;

exports[`@Plugin should add Plugin metadata to a class when decorated with @Plugin({ name: 'TestPlugin' }) 1`] = `
Array [
  DecoratorFactory {
    "beforeAll": false,
    "dependencies": Array [],
    "name": "TestPlugin",
  },
]
`;

exports[`@Plugin should add Plugin metadata to a class when decorated with @Plugin({ name: 'TestPlugin', dependencies: ['TestPlugin2'] }) 1`] = `
Array [
  DecoratorFactory {
    "beforeAll": false,
    "dependencies": Array [
      Object {
        "name": "TestPlugin2",
        "order": "after",
      },
    ],
    "name": "TestPlugin",
  },
]
`;

exports[`@PluginConfig should add Registry and config metadata to a class when decorated with @PluginConfig 1`] = `
Array [
  DecoratorFactory {
    "order": 100,
  },
  DecoratorFactory {
    "autobind": true,
    "options": Object {
      "order": 100,
    },
    "type": "ConfigType",
  },
]
`;

exports[`@PluginConfig should add Registry and config metadata to a class when decorated with @PluginConfig(100) 1`] = `
Array [
  DecoratorFactory {
    "order": 100,
  },
  DecoratorFactory {
    "autobind": true,
    "options": Object {
      "order": 100,
    },
    "type": "ConfigType",
  },
]
`;

exports[`@Register should add Registry metadata to a class when decorated with @Register 1`] = `
Array [
  DecoratorFactory {
    "autobind": true,
    "id": [Function],
    "type": "ConfigType",
  },
]
`;

exports[`@Scan should add Scan metadata to a class when decorated multiple times with @Scan 1`] = `
Array [
  DecoratorFactory {
    "path": "<PROJECT_ROOT>/packages/core/core/__tests__/otherFolder",
  },
  DecoratorFactory {
    "path": "<PROJECT_ROOT>/packages/core/core/__tests__",
  },
]
`;

exports[`@Scan should add Scan metadata to a class when decorated with @Scan() 1`] = `
Array [
  DecoratorFactory {
    "path": "<PROJECT_ROOT>/packages/core/core/__tests__",
  },
]
`;

exports[`@Scan should add Scan metadata to a class when decorated with @Scan(__dirname) 1`] = `
Array [
  DecoratorFactory {
    "path": "<PROJECT_ROOT>/packages/core/core/__tests__",
  },
]
`;

exports[`@Scan should add Scan metadata to a class when decorated with @Scan(relativePath) 1`] = `
Array [
  DecoratorFactory {
    "path": "<PROJECT_ROOT>/packages/core/core/__tests__/fixtures/loader",
  },
]
`;

exports[`@Scan should add Scan metadata to a class when decorated with @Scan(relativePath) 2 1`] = `
Array [
  DecoratorFactory {
    "path": "<PROJECT_ROOT>/packages/core/core/src",
  },
]
`;

exports[`@Service should add Service metadata to a class when decorated with @Service 1`] = `
Array [
  DecoratorFactory {
    "name": undefined,
  },
  DecoratorFactory {
    "autobind": true,
    "id": [Function],
    "type": "ServiceType",
  },
]
`;

exports[`@Service should add Service metadata to a class when decorated with @Service('Test) 1`] = `
Array [
  DecoratorFactory {
    "name": "Test",
  },
  DecoratorFactory {
    "autobind": true,
    "id": "Test",
    "type": "ServiceType",
  },
]
`;

exports[`@Value @Value(options: ValueOptions) should add Value metadata to a class when decorated with @Value(options: ValueOptions) 1`] = `
Object {
  "address": Array [
    PropDecoratorFactory {
      "path": "application.address",
      "validator": Object {
        "schema": Object {
          "$_root": Object {
            "ValidationError": [Function],
            "_types": Set {
              "alternatives",
              "any",
              "array",
              "boolean",
              "date",
              "function",
              "link",
              "number",
              "object",
              "string",
              "symbol",
              "binary",
            },
            "allow": [Function],
            "alt": [Function],
            "alternatives": [Function],
            "any": [Function],
            "array": [Function],
            "assert": [Function],
            "attempt": [Function],
            "binary": [Function],
            "bool": [Function],
            "boolean": [Function],
            "build": [Function],
            "cache": Object {
              "provision": [Function],
            },
            "checkPreferences": [Function],
            "compile": [Function],
            "custom": [Function],
            "date": [Function],
            "defaults": [Function],
            "disallow": [Function],
            "equal": [Function],
            "exist": [Function],
            "expression": [Function],
            "extend": [Function],
            "forbidden": [Function],
            "func": [Function],
            "function": [Function],
            "in": [Function],
            "invalid": [Function],
            "isError": [Function],
            "isExpression": [Function],
            "isRef": [Function],
            "isSchema": [Function],
            "link": [Function],
            "not": [Function],
            "number": [Function],
            "object": [Function],
            "only": [Function],
            "optional": [Function],
            "options": [Function],
            "override": Symbol(override),
            "preferences": [Function],
            "prefs": [Function],
            "ref": [Function],
            "required": [Function],
            "string": [Function],
            "strip": [Function],
            "symbol": [Function],
            "trace": [Function],
            "types": [Function],
            "untrace": [Function],
            "valid": [Function],
            "version": "17.6.0",
            "when": [Function],
            "x": [Function],
            Symbol(@hapi/lab/coverage/initialize): [Function],
          },
          "$_super": Object {},
          "$_temp": Object {
            "ruleset": false,
            "whens": Object {},
          },
          "$_terms": Object {
            "alterations": null,
            "examples": null,
            "externals": null,
            "metas": Array [],
            "notes": Array [],
            "replacements": null,
            "shared": null,
            "tags": Array [],
            "whens": null,
          },
          "_cache": null,
          "_flags": Object {
            "presence": "required",
          },
          "_ids": Object {
            "_byId": Map {},
            "_byKey": Map {},
            "_schemaChain": false,
          },
          "_invalids": null,
          "_preferences": null,
          "_refs": Object {
            "refs": Array [],
          },
          "_rules": Array [],
          "_singleRules": Map {},
          "_valids": null,
          "type": "string",
        },
        "throwError": true,
      },
    },
  ],
  "firstname": Array [
    PropDecoratorFactory {
      "path": "application.surname",
      "validator": Object {
        "schema": Object {
          "$_root": Object {
            "ValidationError": [Function],
            "_types": Set {
              "alternatives",
              "any",
              "array",
              "boolean",
              "date",
              "function",
              "link",
              "number",
              "object",
              "string",
              "symbol",
              "binary",
            },
            "allow": [Function],
            "alt": [Function],
            "alternatives": [Function],
            "any": [Function],
            "array": [Function],
            "assert": [Function],
            "attempt": [Function],
            "binary": [Function],
            "bool": [Function],
            "boolean": [Function],
            "build": [Function],
            "cache": Object {
              "provision": [Function],
            },
            "checkPreferences": [Function],
            "compile": [Function],
            "custom": [Function],
            "date": [Function],
            "defaults": [Function],
            "disallow": [Function],
            "equal": [Function],
            "exist": [Function],
            "expression": [Function],
            "extend": [Function],
            "forbidden": [Function],
            "func": [Function],
            "function": [Function],
            "in": [Function],
            "invalid": [Function],
            "isError": [Function],
            "isExpression": [Function],
            "isRef": [Function],
            "isSchema": [Function],
            "link": [Function],
            "not": [Function],
            "number": [Function],
            "object": [Function],
            "only": [Function],
            "optional": [Function],
            "options": [Function],
            "override": Symbol(override),
            "preferences": [Function],
            "prefs": [Function],
            "ref": [Function],
            "required": [Function],
            "string": [Function],
            "strip": [Function],
            "symbol": [Function],
            "trace": [Function],
            "types": [Function],
            "untrace": [Function],
            "valid": [Function],
            "version": "17.6.0",
            "when": [Function],
            "x": [Function],
            Symbol(@hapi/lab/coverage/initialize): [Function],
          },
          "$_super": Object {},
          "$_temp": Object {
            "ruleset": null,
            "whens": Object {},
          },
          "$_terms": Object {
            "alterations": null,
            "examples": null,
            "externals": null,
            "metas": Array [],
            "notes": Array [],
            "replacements": null,
            "shared": null,
            "tags": Array [],
            "whens": null,
          },
          "_cache": null,
          "_flags": Object {},
          "_ids": Object {
            "_byId": Map {},
            "_byKey": Map {},
            "_schemaChain": false,
          },
          "_invalids": null,
          "_preferences": null,
          "_refs": Object {
            "refs": Array [],
          },
          "_rules": Array [],
          "_singleRules": Map {},
          "_valids": null,
          "type": "string",
        },
        "throwError": true,
      },
    },
  ],
  "name": Array [
    PropDecoratorFactory {
      "path": "application.name",
      "validator": null,
    },
  ],
  "postalcode": Array [
    PropDecoratorFactory {
      "path": "application.postalcode",
      "validator": Object {
        "customErrorMsg": "Error",
        "schema": Object {
          "$_root": Object {
            "ValidationError": [Function],
            "_types": Set {
              "alternatives",
              "any",
              "array",
              "boolean",
              "date",
              "function",
              "link",
              "number",
              "object",
              "string",
              "symbol",
              "binary",
            },
            "allow": [Function],
            "alt": [Function],
            "alternatives": [Function],
            "any": [Function],
            "array": [Function],
            "assert": [Function],
            "attempt": [Function],
            "binary": [Function],
            "bool": [Function],
            "boolean": [Function],
            "build": [Function],
            "cache": Object {
              "provision": [Function],
            },
            "checkPreferences": [Function],
            "compile": [Function],
            "custom": [Function],
            "date": [Function],
            "defaults": [Function],
            "disallow": [Function],
            "equal": [Function],
            "exist": [Function],
            "expression": [Function],
            "extend": [Function],
            "forbidden": [Function],
            "func": [Function],
            "function": [Function],
            "in": [Function],
            "invalid": [Function],
            "isError": [Function],
            "isExpression": [Function],
            "isRef": [Function],
            "isSchema": [Function],
            "link": [Function],
            "not": [Function],
            "number": [Function],
            "object": [Function],
            "only": [Function],
            "optional": [Function],
            "options": [Function],
            "override": Symbol(override),
            "preferences": [Function],
            "prefs": [Function],
            "ref": [Function],
            "required": [Function],
            "string": [Function],
            "strip": [Function],
            "symbol": [Function],
            "trace": [Function],
            "types": [Function],
            "untrace": [Function],
            "valid": [Function],
            "version": "17.6.0",
            "when": [Function],
            "x": [Function],
            Symbol(@hapi/lab/coverage/initialize): [Function],
          },
          "$_super": Object {},
          "$_temp": Object {
            "ruleset": false,
            "whens": Object {},
          },
          "$_terms": Object {
            "alterations": null,
            "examples": null,
            "externals": null,
            "metas": Array [],
            "notes": Array [],
            "replacements": null,
            "shared": null,
            "tags": Array [],
            "whens": null,
          },
          "_cache": null,
          "_flags": Object {
            "presence": "required",
          },
          "_ids": Object {
            "_byId": Map {},
            "_byKey": Map {},
            "_schemaChain": false,
          },
          "_invalids": null,
          "_preferences": null,
          "_refs": Object {
            "refs": Array [],
          },
          "_rules": Array [],
          "_singleRules": Map {},
          "_valids": null,
          "type": "string",
        },
        "throwError": true,
      },
    },
  ],
  "surname": Array [
    PropDecoratorFactory {
      "path": "application.surname",
      "validator": Object {
        "schema": Object {
          "$_root": Object {
            "ValidationError": [Function],
            "_types": Set {
              "alternatives",
              "any",
              "array",
              "boolean",
              "date",
              "function",
              "link",
              "number",
              "object",
              "string",
              "symbol",
              "binary",
            },
            "allow": [Function],
            "alt": [Function],
            "alternatives": [Function],
            "any": [Function],
            "array": [Function],
            "assert": [Function],
            "attempt": [Function],
            "binary": [Function],
            "bool": [Function],
            "boolean": [Function],
            "build": [Function],
            "cache": Object {
              "provision": [Function],
            },
            "checkPreferences": [Function],
            "compile": [Function],
            "custom": [Function],
            "date": [Function],
            "defaults": [Function],
            "disallow": [Function],
            "equal": [Function],
            "exist": [Function],
            "expression": [Function],
            "extend": [Function],
            "forbidden": [Function],
            "func": [Function],
            "function": [Function],
            "in": [Function],
            "invalid": [Function],
            "isError": [Function],
            "isExpression": [Function],
            "isRef": [Function],
            "isSchema": [Function],
            "link": [Function],
            "not": [Function],
            "number": [Function],
            "object": [Function],
            "only": [Function],
            "optional": [Function],
            "options": [Function],
            "override": Symbol(override),
            "preferences": [Function],
            "prefs": [Function],
            "ref": [Function],
            "required": [Function],
            "string": [Function],
            "strip": [Function],
            "symbol": [Function],
            "trace": [Function],
            "types": [Function],
            "untrace": [Function],
            "valid": [Function],
            "version": "17.6.0",
            "when": [Function],
            "x": [Function],
            Symbol(@hapi/lab/coverage/initialize): [Function],
          },
          "$_super": Object {},
          "$_temp": Object {
            "ruleset": null,
            "whens": Object {},
          },
          "$_terms": Object {
            "alterations": null,
            "examples": null,
            "externals": null,
            "metas": Array [],
            "notes": Array [],
            "replacements": null,
            "shared": null,
            "tags": Array [],
            "whens": null,
          },
          "_cache": null,
          "_flags": Object {},
          "_ids": Object {
            "_byId": Map {},
            "_byKey": Map {},
            "_schemaChain": false,
          },
          "_invalids": null,
          "_preferences": null,
          "_refs": Object {
            "refs": Array [],
          },
          "_rules": Array [],
          "_singleRules": Map {},
          "_valids": null,
          "type": "string",
        },
        "throwError": true,
      },
    },
  ],
}
`;

exports[`@init should add init metadata to a class when decorating a method with @init 1`] = `
Object {
  "test2Method": Array [
    PropDecoratorFactory {},
  ],
  "testMethod": Array [
    PropDecoratorFactory {},
  ],
}
`;

exports[`@preDestroy should add preDestroy metadata to a class when decorated with @preDestroy 1`] = `
Object {
  "preDestroy": Array [
    PropDecoratorFactory {},
  ],
  "preDestroy2": Array [
    PropDecoratorFactory {},
  ],
}
`;
